# degreelens

./: .gitignore  README.md
.github/workflows/: ios-unsigned.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  academic.py  config.py  dependencies.py  main.py  state.py
backend/app/agent/: __init__.py  factory.py
backend/app/api/routes/: __init__.py  academic.py  auth.py  chat.py  health.py
backend/app/schemas/: academic.py  auth.py  chat.py
backend/app/sessions/: __init__.py  models.py  store.py
backend/guc_portal/: _parse.py  _sites.py  client.py
backend/tests/: test_academic_context.py  test_grade_parser.py  test_health.py
docs/: api-contract.md  architecture.md  security.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/app/: app.dart  theme.dart
mobile/lib/core/: environment.dart
mobile/lib/data/: api_client.dart  models.dart  repositories.dart  session_storage.dart
mobile/lib/ui/advisor/: advisor_screen.dart
mobile/lib/ui/auth/: login_screen.dart
mobile/lib/ui/core/: app_shell.dart  lens_components.dart
mobile/lib/ui/courses/: course_details_screen.dart  courses_screen.dart
mobile/lib/ui/overview/: overview_screen.dart
mobile/test/: models_test.dart
mobile/web/: index.html  manifest.json
notebooks/: 00-portal-basics.ipynb  portal-tools.ipynb
scripts/: generate_app_icons.ps1  run_android.ps1  run_backend.ps1
(+5 files in other folders)
